--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <!--Add your title here-->
-    <title>Text Me - Powered by SuperPhone®</title>
+    <title>TextSunny</title>
     
     <!--This code makes the website responsive-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -87,6 +87,10 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
+    background-image: url("ryan_leslie_private_jet_ny_post_by_lee_williams.jpg");
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-size: cover;
         }
         
         *{
